# skillet

./: .dockerignore  .gitignore  .mcp.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile  LICENSE-APACHE  LICENSE-MIT  README.md  RELEASING.md  cliff.toml  dist-workspace.toml  fly.toml  release-plz.toml  skillet.toml
.github/workflows/: ci.yml  docker.yml  release-plz.yml  release.yml
docs/: design.md  strategy.md
registry/: repos.toml
registry/skillet/contributor/: SKILL.md  skill.toml
registry/skillet/registry-maintainer/: SKILL.md  skill.toml
registry/skillet/setup/: SKILL.md  skill.toml
registry/skillet/skill-author/: SKILL.md  skill.toml
registry/skillet/skill-repos/: SKILL.md
registry/skillet/user/: SKILL.md
skills/skillet/contributor/: SKILL.md
skills/skillet/registry-maintainer/: SKILL.md
skills/skillet/repo-maintainer/: SKILL.md  skill.toml
skills/skillet/setup/: SKILL.md  skill.toml
skills/skillet/skill-author/: SKILL.md
skills/skillet/skill-repos/: SKILL.md  skill.toml
skills/skillet/user/: SKILL.md  skill.toml
src/: annotations.rs  bm25.rs  cache.rs  config.rs  discover.rs  error.rs  git.rs  index.rs  install.rs  integrity.rs  lib.rs  main.rs  manifest.rs  pack.rs  project.rs  prompts.rs  publish.rs  registry.rs  repo.rs  resolve.rs  safety.rs  scaffold.rs  search.rs  state.rs  suggest.rs  testutil.rs  trust.rs  validate.rs  version.rs
src/cli/: author.rs  install.rs  mod.rs  repo.rs  repos.rs  search.rs  setup.rs  trust.rs  uninstall.rs
src/resources/: mod.rs  repos.rs  skill_content.rs  skill_files.rs  skill_metadata.rs
src/tools/: annotate_skill.rs  audit_skills.rs  compare_skills.rs  info_skill.rs  install_skill.rs  list_categories.rs  list_installed.rs  list_skills_by_owner.rs  mod.rs  search_skills.rs  setup_config.rs  skill_status.rs  validate_skill.rs
test-npm-registry/skills/redis-caching/: SKILL.md
test-npm-registry/skills/session-management/: SKILL.md
test-npm-registry/skills/vector-search/: SKILL.md
test-npm-repo/: skillet.toml
test-registry/: config.toml
test-registry/acme/docker-workflow/: SKILL.md  skill.toml
test-registry/acme/git-conventions/: MANIFEST.sha256  SKILL.md  skill.toml
test-registry/acme/github-actions/: SKILL.md  skill.toml
test-registry/acme/python-dev/: skill.toml  versions.toml
test-registry/acme/unsafe-demo/: SKILL.md  skill.toml
test-registry/devtools/api-design/: skill.toml
test-registry/joshrotenberg/code-review/: MANIFEST.sha256  SKILL.md  skill.toml
test-registry/joshrotenberg/rust-dev/: skill.toml  versions.toml
test-registry/joshrotenberg/security-audit/: skill.toml
test-registry/joshrotenberg/skillet-dev/: SKILL.md  skill.toml
test-registry/joshrotenberg/typescript-dev/: SKILL.md  skill.toml
test-registry/skillet/setup/: SKILL.md  skill.toml
test-repo/: skillet.toml
test-repo/acme/docker-workflow/: skill.toml
test-repo/acme/git-conventions/: skill.toml
test-repo/acme/github-actions/: skill.toml
tests/: cli.rs  e2e.rs  http.rs  scenarios.rs
(+34 files in other folders)
