[package]
name = "skillet-mcp"
version = "0.1.0"
edition = "2024"
rust-version = "1.90"
description = "MCP-native skill registry for AI agents"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/joshrotenberg/grimoire"
repository = "https://github.com/joshrotenberg/grimoire"
keywords = ["mcp", "skills", "ai-agents", "registry"]
categories = ["development-tools", "command-line-utilities"]

[lib]
name = "skillet_mcp"
path = "src/lib.rs"

[[bin]]
name = "skillet"
path = "src/main.rs"

[dependencies]
tower-mcp = { version = "0.6", features = ["testing", "http"] }
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "1"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
sha2 = "0.10"
hex = "0.4"
notify-debouncer-mini = "0.5"
tempfile = "3.26.0"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
