[package]
name = "skillet-mcp"
version = "0.5.1"
edition = "2024"
rust-version = "1.90"
description = "MCP-native skill discovery for AI agents"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/joshrotenberg/skillet"
repository = "https://github.com/joshrotenberg/skillet"
keywords = ["mcp", "skills", "ai-agents"]
categories = ["development-tools", "command-line-utilities"]

[lib]
name = "skillet_mcp"
path = "src/lib.rs"

[[bin]]
name = "skillet"
path = "src/main.rs"

[dependencies]
tower-mcp = { version = "0.8", features = ["testing", "http", "dynamic-tools"] }
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "1"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
sha2 = "0.10"
hex = "0.4"
notify-debouncer-mini = "0.5"
thiserror = "2"
tempfile = "3.26.0"

[features]
testutil = []

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
reqwest = { version = "0.12", features = ["json", "blocking"] }
skillet-mcp = { path = ".", features = ["testutil"] }

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
